; ModuleID = '/home/carl/AnghaBench/reactos/base/system/bootok/extr_bootok.c__tmain.c'
source_filename = "/home/carl/AnghaBench/reactos/base/system/bootok/extr_bootok.c__tmain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"NotifyBootConfigStatus failed! (Error: %lu)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_tmain(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  store i32 %0, i32* %3, align 4
  store i32** %1, i32*** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @UNREFERENCED_PARAMETER(i32 %5)
  %7 = load i32**, i32*** %4, align 8
  %8 = ptrtoint i32** %7 to i32
  %9 = call i32 @UNREFERENCED_PARAMETER(i32 %8)
  %10 = load i32, i32* @TRUE, align 4
  %11 = call i32 @NotifyBootConfigStatus(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %2
  %14 = call i32 @_T(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  %15 = call i32 (...) @GetLastError()
  %16 = call i32 @_tprintf(i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %13, %2
  ret i32 0
}

declare dso_local i32 @UNREFERENCED_PARAMETER(i32) #1

declare dso_local i32 @NotifyBootConfigStatus(i32) #1

declare dso_local i32 @_tprintf(i32, i32) #1

declare dso_local i32 @_T(i8*) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
